--- a/resources/package.json
+++ b/resources/package.json
@@ -7,10 +7,12 @@
     "serve": "vite preview"
   },
   "dependencies": {
+    "papaparse": "^5.3.1",
     "vue": "^3.0.5",
     "vue-router": "^4.0.10"
   },
   "devDependencies": {
+    "@types/papaparse": "^5.2.5",
     "@vitejs/plugin-vue": "^1.2.3",
     "@vue/compiler-sfc": "^3.0.5",
     "pug": "^3.0.2",
