--- a/resources/package.json
+++ b/resources/package.json
@@ -4,7 +4,9 @@
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc --noEmit && vite build",
-    "serve": "vite preview"
+    "serve": "vite preview",
+    "test:unit": "jest",
+    "test:unit-watch": "jest --watch"
   },
   "dependencies": {
     "papaparse": "^5.3.1",
@@ -12,13 +14,18 @@
     "vue-router": "^4.0.10"
   },
   "devDependencies": {
+    "@types/jest": "^26.0.23",
     "@types/papaparse": "^5.2.5",
     "@vitejs/plugin-vue": "^1.2.3",
     "@vue/compiler-sfc": "^3.0.5",
+    "@vue/test-utils": "^2.0.0-rc.10",
+    "jest": "^26.6.3",
     "pug": "^3.0.2",
     "sass": "^1.35.1",
+    "ts-jest": "^26.5.4",
     "typescript": "^4.3.2",
     "vite": "^2.3.8",
+    "vue-jest": "^5.0.0-alpha.10",
     "vue-tsc": "^0.0.24"
   }
 }
