--- a/resources/package.json
+++ b/resources/package.json
@@ -4,7 +4,9 @@
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc --noEmit && vite build",
-    "serve": "vite preview"
+    "serve": "vite preview",
+    "cy": "cypress open-ct",
+    "cy:ci": "cypress run-ct"
   },
   "dependencies": {
     "papaparse": "^5.3.1",
@@ -12,9 +14,12 @@
     "vue-router": "^4.0.10"
   },
   "devDependencies": {
+    "@cypress/vite-dev-server": "^2.0.2",
+    "@cypress/vue": "^3.0.0-beta.3",
     "@types/papaparse": "^5.2.5",
     "@vitejs/plugin-vue": "^1.2.5",
     "@vue/compiler-sfc": "^3.1.2",
+    "cypress": "^8.0.0",
     "pug": "^3.0.2",
     "sass": "^1.35.2",
     "typescript": "^4.3.5",
