--- a/resources/package.json
+++ b/resources/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "papaparse": "^5.3.1",
+    "pinia": "^2.0.0-beta.5",
     "vue": "^3.1.5",
     "vue-router": "^4.0.10"
   },
