--- a/resources/package.json
+++ b/resources/package.json
@@ -4,7 +4,8 @@
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc --noEmit && vite build",
-    "serve": "vite preview"
+    "serve": "vite preview",
+    "lint:script": "eslint --ext .ts,vue --ignore-path .gitignore ."
   },
   "dependencies": {
     "papaparse": "^5.3.1",
@@ -14,8 +15,13 @@
   },
   "devDependencies": {
     "@types/papaparse": "^5.2.6",
+    "@typescript-eslint/eslint-plugin": "^4.29.0",
+    "@typescript-eslint/parser": "^4.29.0",
     "@vitejs/plugin-vue": "^1.3.0",
     "@vue/compiler-sfc": "^3.1.5",
+    "@vue/eslint-config-typescript": "^7.0.0",
+    "eslint": "^7.32.0",
+    "eslint-plugin-vue": "^7.15.1",
     "pug": "^3.0.2",
     "sass": "^1.37.5",
     "typescript": "^4.3.5",
